# vcsencode

./: .gitignore  AGENTS.md  README.md  environment.yml  pyproject.toml  test.py
docs/: README.figures.md  vcs_romero.md
docs/debug/: autocap_example.py  check_theta_anchor.py  pad_and_encode.py
resources/: __init__.py
scripts/: make_vcs_overview.py
tests/: __init__.py  test_centerline_fit.py  test_imports.py  test_inverse_decode.py  test_io_caps.py  test_metrics_qc.py  test_npzio.py  test_radius_surface_fit.py  test_rays_sampling.py  test_rmf_projection.py  test_theta_periodic.py
vcsencode/: __init__.py  models.py
vcsencode/centerline/: __init__.py
vcsencode/cli/: __init__.py  main.py
vcsencode/encoding/: __init__.py  crop.py  forward.py  inverse.py  metrics.py  npzio.py
vcsencode/figures/: __init__.py  overview.py
vcsencode/geom/: __init__.py  checks.py  frames.py  padding.py  periodic.py  projection.py  rays.py
vcsencode/io/: __init__.py
vcsencode/visualize/: __init__.py  debug.py  figures.py
