[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vcsencode"
version = "0.1.0"
description = "Vessel Coordinate System (VCS) encoder/decoder (scientific scaffold)"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "scipy",
  "trimesh",
  "vtk",
  "pyvista",
  "matplotlib",
  "typer[all]"
]

[project.scripts]
vcsencode = "vcsencode.cli.main:app"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E","F","I","B","UP"]
ignore = []
